Add color settings to Accesbility options

--- a/src/main/resources/assets/blockoutlines/lang/en_us.json
+++ b/src/main/resources/assets/blockoutlines/lang/en_us.json
@@ -1,4 +1,9 @@
 {
-  "options.accessibility.high_contrast_block_outline": "High Contrast Block Outlines",
-  "options.accessibility.high_contrast_block_outline.tooltip": "Enhances the block outline contrast of the targeted block."
+    "options.accessibility.high_contrast_block_outline": "High Contrast Block Outlines",
+    "options.accessibility.high_contrast_block_outline.tooltip": "Enhances the block outline contrast of the targeted block.",
+    "options.pinpal.blockoutlines.alpha": "Opacity",
+    "options.pinpal.blockoutlines.outer_opacity.tooltip": "Controls how transparent the outer border lines color is on the targeted block.",
+    "options.pinpal.blockoutlines.inner_opacity.tooltip": "Controls how transparent the inner line color is on the targeted block.",
+    "options.pinpal.blockoutlines.outer_color.tooltip": "Controls the color of the outer border lines on the targeted block.",
+    "options.pinpal.blockoutlines.inner_color.tooltip": "Controls the color of the inner line on the targeted block."
 }
